Add worker Dockerfile and worker-launch script

--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -5,8 +5,8 @@ RUN apt-get update && \
     apt-get install -y openalpr && \
     (cd /usr/share/openalpr/runtime_data/ocr/; cp tessdata/lus.traineddata .) && \
     apt-get install -y python3 python3-pip python3-pillow python3-openalpr python3-redis && \
-    sudo pip3 install pika && \
-    sudo pip3 install jsonpickle && \
+    pip3 install pika && \
+    pip3 install jsonpickle && \
     mkdir lab7
 
 WORKDIR /lab7
